--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
- "start_url": "index.htm?installed=true",
+ "start_url": "index.htm",
  "background_color": "#FFFFFF",
  "name": "FADISP - Tour Virtual 360°",
  "display": "fullscreen",
